docs: complete handbook/concurrency and open handbook/jvm domain (Week 9)
Add handbook/concurrency/{java-memory-model-and-volatile,deadlock-race-conditions-and-thread-diagnostics,executors-and-thread-pool-sizing,virtual-threads}.md and handbook/jvm/gc-fundamentals-and-log-analysis.md as canonical Phase 5 chapters, elevating the real executed evidence from study-packs/week-09. Slim all five week-09 topic files (01-05) to a per-section summary + canonical-chapter link, and update MANIFEST.md/README.md word counts and purpose lines to match (11,816 -> 8,526 words).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>